# jetson-gpio

./: .gitignore  LICENCE.txt  LICENSE.txt  MANIFEST.in  README.md  jetson_gpio_pr_description.md  jetson_gpio_super_test_script.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
.pybuild/cpython2_2.7_jetson-gpio/: .pydistutils.cfg
debian/: changelog  control  copyright  jetson-gpio-common.udev  python-jetson-gpio.postinst  python3-jetson-gpio.postinst  rules
dev/: pinctrl-tegra234.c  update_pinmux_registers.py
doc/: README.txt
docker/: Dockerfile  entrypoint.sh
etc/: 99-gpio.rules
lib/python/Jetson/GPIO/: 99-gpio.rules  __init__.py  constants.py  gpio.py  gpio_cdev.py  gpio_event.py  gpio_pin_data.py  gpio_pin_mux_lookup.py  gpio_pinmux_lookup.py
samples/: button_event.py  button_interrupt.py  button_led.py  issue40-trigger.py  issue40.py  jetson_model.py  run_sample.sh  simple_input.py  simple_out.py  simple_pwm.py  test_all_apis.py  test_all_pins.py  test_all_pins_input.py  test_gpio_pin_mux_lookup.py  test_gpio_pinmux_lookup.py  update_pinmux_registers.py
samples/docker/: Dockerfile
tests/: conftest.py
tests/unit/: test_setup_validation.py
